fix spacing issues on root page

--- a/source/stylesheets/all.scss
+++ b/source/stylesheets/all.scss
@@ -76,7 +76,7 @@ a {
 }
 
 .nav-links, .social-links {
-  margin: 0 0 0 0.75em;
+  margin: 0 0 0 0.25em;
   padding: 0;
   list-style: none;
   font-weight: 900;
@@ -92,7 +92,7 @@ a {
 }
 
 .nav-links {
-  margin-top: 0.5em;
+  margin-bottom: 0.25em;
   a {
     display: inline-block;
     padding: 0.15em 0.4em;
@@ -233,6 +233,7 @@ screen and (min-device-width: 768px) and (max-width: 768px)
   }
 
   .lesser-column {
+    margin-left: 0;
     position: relative;
     text-align: center;
   }
